--- a/frontend/scss/_footer.scss
+++ b/frontend/scss/_footer.scss
@@ -12,11 +12,14 @@
   font-size: 1rem;
   .footer-left {
     @include display-flex;
+    border: 1px solid var(--color-light);
+    border-radius: var(--border-radius);
+    padding: var(--padding);
     .footer-center {
       @include display-flex;
       flex-direction: column;
       .footer-right {
-        @include display-flex;
+        @include display-flex;    
       }
     }
   }
@@ -27,6 +30,10 @@
   min-height: 170px;
   max-width: 170px;
   min-width: 170px;
+}
+
+ul {
+  @include text-align;
 }
 
 @media (max-width: 415px) {
