--- a/frontend/scss/_mixin.scss
+++ b/frontend/scss/_mixin.scss
@@ -4,6 +4,11 @@
     align-items: center;
   }
 
+  @mixin text-align {
+    text-align: justify;
+    text-align-last: center;
+  }
+
   @mixin background-image {
   background-position: center;
   background-size: cover;
